# tic-tac-toe-AI

./: CMakeLists.txt  README.md
inc/: ArrowButtons.h  Grid.h  MenuGUI.h  MouseDriver.h  Plansza.h  PlanszaData.h  Player.h  SettingsDefinitions.h  WinCheck.h  WinScreen.h
include/: GameGUI.h  Gra.h  ListaLD.h  MiniMaxAI.h
src/: ArrowButtons.cpp  GameGUI.cpp  Gra.cpp  Grid.cpp  ListaLD.cpp  MenuGUI.cpp  MiniMaxAI.cpp  MouseDriver.cpp  Plansza.cpp  PlanszaData.cpp  Player.cpp  WinCheck.cpp  WinScreen.cpp  main.cpp
